# brave-core

./: BUILD.gn  PRESUBMIT.py  package.json
.github/workflows/: pr-test-set-milestone-139x.yml
app/: brave_settings_strings.grdp
browser/: brave_profile_prefs.cc  sources.gni
browser/brave_rewards/: rewards_tab_helper.cc  rewards_tab_helper.h
browser/brave_vpn/dns/: brave_vpn_dns_observer_service.cc
browser/brave_wallet/: brave_wallet_service_delegate_impl_android.cc  keyring_service_unittest.cc
browser/permissions/: brave_wallet_permission_context_unittest.cc
browser/ui/: BUILD.gn  window_closing_confirm_browsertest.cc
browser/ui/webui/: brave_adblock_ui.cc
chromium_src/chrome/common/: url_constants.cc
common/: pref_names.cc  pref_names.h
common/importer/: chrome_importer_utils.cc
components/body_sniffer/: body_sniffer_url_loader.cc
components/brave_adaptive_captcha/: server_util.cc
components/brave_ads/browser/: ads_service_impl.cc  ads_service_impl.h
components/brave_ads/common/: BUILD.gn  search_result_ad_util.cc  search_result_ad_util_unittest.cc
components/brave_rewards/browser/: rewards_service_impl.cc  rewards_service_impl.h  rewards_service_impl_jp_unittest.cc
components/brave_rewards/common/: BUILD.gn  rewards_args.cc  rewards_args.h
patches/: chrome-VERSION.patch  chrome-browser-ui-views-translate-translate_bubble_controller.cc.patch  ui-accessibility-platform-ax_platform_node_cocoa.mm.patch
script/: chromium_presubmit_overrides.py
script/lib/: chromium_presubmit_utils.py
test/: BUILD.gn
(+73 files in other folders)
