source_set("features") {
  sources = [
    "features.cc",
    "features.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_rewards/common/buildflags:buildflags",
  ]
}

static_library("common") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
    "rewards_args.cc",
    "rewards_args.h",
    "url_constants.cc",
    "url_constants.h",
  ]

  deps = [
    ":features",
    "//third_party/abseil-cpp:absl",
  ]
}
